Fixed the spacing

--- a/src/component/LandingPageV2/Introduction/style.css
+++ b/src/component/LandingPageV2/Introduction/style.css
@@ -5,7 +5,7 @@
 
 .shermancenter{
     /* position: absolute; */
-    width: 1440px;
+    /* width: 1440px; */
     height: 904px;
     left: 0px;
     top: 0px;
